--- a/css/main-section-style.css
+++ b/css/main-section-style.css
@@ -7,14 +7,16 @@ main{
 
 section{
     height:  38rem;
+    position: relative;
 }
 
-section .section-preview{
+.section-preview{
     height: 100%;
     background-color: var(--secondary-color);
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .section-preview-text{
@@ -25,6 +27,7 @@ section .section-preview{
     align-items: center;
     justify-content: center;
     gap: 10px;
+    z-index: 1000;
 }
 
 .section-preview-text p{
@@ -43,3 +46,99 @@ section .section-preview{
     font-weight: var(--text-weight-bold);
 }
 
+/* ------- CLOUDS -------- */
+
+.clouds{
+    position: absolute;
+    top: 0;
+    left: 0 ;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.cloud{
+    position: absolute;
+    z-index: 1;
+}
+
+.cloud1{
+    top: 150px;
+    left: 60%;
+    transform: scale(0.6);
+}
+
+.cloud2{
+    top: 250px;
+    left: 20%;
+    transform: scale(1.2);
+}
+
+.cloud3{
+    top: 345px;
+    left: -90px;
+    transform: scale(2);
+}
+
+.cloud4{
+    top: 100px;
+    left: 10%;
+    transform: scale(1);
+}
+
+.cloud5{
+    top: 420px;
+    left: 75%;
+    transform: scale(1.4);
+}
+
+.cloud6{
+    top: 450px;
+    left: 70%;
+    transform: scale(2.7);
+}
+
+.cloud7{
+    top: 50px;
+    left: 86%;
+    transform: scale(2.3);
+}
+
+.cloud8{
+    top: 470px;
+    left: 64%;
+    transform: scale(1.4);
+}
+
+.cloud9{
+    top: 490px;
+    left: 40%;
+    transform: scale(1);
+}
+
+/* --- CURVE LINE --- */
+.curve-container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60%;
+    z-index: 2;
+}
+
+.responsive-svg {
+    width: 100%;
+    height: 100%;
+}
+
+.interactive-point {
+    cursor: pointer;
+    
+
+    /* fill: var(--color-for-status); */
+    transition: fill 0.3s;
+}
+
+.interactive-point:hover {
+    fill: yellow;
+}
