--- a/css/main-section-style.css
+++ b/css/main-section-style.css
@@ -7,9 +7,11 @@ main{
 
 section{
     height:  38rem;
+    align-items: center;
+    /* margin: 0 auto; */
 }
 
-section .section-preview{
+.section-preview{
     height: 100%;
     background-color: var(--secondary-color);
     display: flex;
