--- a/css/variables.css
+++ b/css/variables.css
@@ -1,4 +1,4 @@
-/* @include url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap'); */
+@include url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 :root{
     --base-color: #FFFFFF;
