--- a/css/section-manage.css
+++ b/css/section-manage.css
@@ -1,3 +1,4 @@
+
 .section-m{
     height: 38rem;
     background-color: var(--secondary-color);
@@ -5,6 +6,62 @@
 
 .section-manage{
     height: 100%;
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.text{
+    display: flex;
+    flex-direction: column;
+    width: 27rem;
+    height: 100%;
+    justify-content: center;
+    gap: 1em;
+}
+
+.text p{
+    text-align: justify;
+    letter-spacing: 1px;
+}
+
+.text p:first-child{
+    font-size: 12px;
+    font-weight: var(--text-weight-bold);
+}
+
+.image-tech{
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 45rem;
+}
+.image-tech-elem{
+
+    width: 100%;
+}
+
+.container-buttons{
+    display: flex;
+    flex-direction: row;
+    width: 17rem;
+    height: 2rem;
+}
+
+.container-buttons button{
+    margin-top : 2rem;
+    width: 50%;
+    height: 100%;
+}
+
+.container-buttons button:first-child{
+    border: none;
+    background-color: var(--color-for-actient-button);
+    color: var(--base-color);
+}
+.container-buttons button:last-child{
+    border: 1px solid var(--color-for-other-button);
+    background-color: var(--secondary-color);
+    color: var(--text-color);
 }
