--- a/css/header-style.css
+++ b/css/header-style.css
@@ -41,5 +41,67 @@ nav .container-btn{
     background-color: var(--color-for-status);
 }
 
+.burger-menu {
+    display: none;
+    flex-direction: column;
+    gap: 0.5rem;
+    cursor: pointer;
+}
+
+.burger-menu .bar {
+    width: 25px;
+    height: 3px;
+    background-color: var(--text-color);
+}
+
+.nav-mobile {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 80%;
+    background-color: white;
+    box-shadow: -2px 3px 15px rgba(35 65 173 / 0.6);
+    padding: 2rem;
+    z-index: 1000;
+}
+
+.close-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.arrow {
+    margin-left: 0.5rem;
+}
+
 /* ----------end header---------- */
 
+@media (max-width: 825px) {
+    .nav-desktop {
+        display: none;
+    }
+
+    .burger-menu {
+        display: flex;
+    }
+
+    .nav-mobile.active {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        z-index: 10000;
+    }
+
+    .nav-mobile.active nav{
+
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+}
